# ros_openimu

./: .gitignore  CMakeLists.txt  package.xml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_dev_package.yml
docker/additional-pip-files/: imu-requirements.txt  requirements.txt
docker/additional-pip-installs/: requirements.txt
launch/: openimu_driver.launch  openimu_driver.launch.py
scripts/: openimu_driver.py
src/aceinna/devices/: device_manager.py
src/aceinna/devices/base/: uart_base.py
src/aceinna/devices/openimu/: uart_provider.py
src/aceinna/framework/: file_storage.py
src/aceinna/framework/utils/: resource.py
src/ros_openimu/src/: aceinna
